// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render span element by default 1`] = `
<div>
  <span
    class="sc-bdfBwQ hcPyHd"
  />
</div>
`;

exports[`Text should render with all the props 1`] = `
<div>
  <span
    class="sc-bdfBwQ bttaXt"
  />
</div>
`;
